# rustbatch_examples

./: README.md
boids/: Cargo.toml
boids/src/: main.rs
