[package]
name = "boids"
version = "0.1.0"
authors = ["jakub <mlokogegelmlok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbatch = {path = "C:/Users/jakub/Documents/programming/rust/src/rustbatch"}
